--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MainTabViews</string>
+    <string name="app_name">PanellelAid</string>
     <string name="title_activity_chapters">Chapters</string>
     <string name="title_activity_first_time">FirstTimeActivity</string>
 
